# orbum

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .tags  .tags1  .travis.yml  CMakeLists.txt  PCSX2_Rewrite.sln  README.md  c_flag_overrides_msvc.cmake  cxx_flag_overrides_msvc.cmake  orbum.sln
PCSX2_Core/: BitfieldRegister_t.cpp  CMakeLists.txt  COP0_BitfieldRegisters_t.h  COP0_t.h  COP1_BitfieldRegisters_t.h  COP1_t.h  EECore_t.h  EE_t.h  ExceptionHandler.cpp  ExceptionHandler.h  FPURegister_t.cpp  FPURegister_t.h  GlobalConstants.h  GlobalLog.cpp  GlobalLog.h  GlobalTypes.h  Instruction_t.cpp  Instruction_t.h  Interpreter.cpp  Interpreter.h  InterpreterEECore_COMPARE.cpp  InterpreterR5900.cpp  InterpreterR5900_INTEGER_MULT_ADD.cpp  InterpreterR5900_INTEGER_MULT_DIV.cpp  MMUHandler.cpp  MMUHandler.h  MainMemory_t.h  Memory Mappings.xlsx  PCSX2_Core.vcxproj  PCSX2_Core.vcxproj.filters  PS2Constants.h  PS2Exception_t.cpp  PS2Exception_t.h  PS2Resources_t.h  R5900 Implementation Register.xlsx  R5900_t.h  Register_t.cpp  Register_t.h  VMBaseComponent.h  VMExceptionHandlerComponent.h  (+4 more)
PCSX2_Core/Docs/: Bitfield Register Creation Helper.xlsx  EECore Instruction Implementation Register.xlsm  GenMemoryMappings.py  IOP Instruction Implementation Register.xlsm  IOPCore Instruction Implementation Register.xlsm  Memory Mappings.xlsx  MemoryMappings.csv  R5900 Instruction Implementation Register.xlsm  R5900 Instruction Implementation Register.xlsx
PCSX2_Core/Source/Common/Global/: CompileOptions.h  Constants.h  Context.h  GlobalConstants.h  GlobalLog.cpp  GlobalLog.h  GlobalMacros.h  GlobalOptions.h  GlobalTypes.cpp  GlobalTypes.h  Globals.h  Log.cpp  Log.h  PrimativeTypes.h
PCSX2_Core/Source/Common/Interfaces/: PS2ResourcesSubcategory.cpp  PS2ResourcesSubcategory.h  PS2ResourcesSubobject.cpp  PS2ResourcesSubobject.h  PhysicalMapped.cpp  PhysicalMapped.h  VMBaseComponent.cpp  VMBaseComponent.h  VMExecutionCore.cpp  VMExecutionCore.h  VMExecutionCoreComponent.cpp  VMExecutionCoreComponent.h  VMMMUComponent.cpp  VMMMUComponent.h  VMMMUMappedStorageObject.cpp  VMMMUMappedStorageObject.h
PCSX2_Core/Source/Common/PS2 Constants/: PS2Constants.h
PCSX2_Core/Source/Common/PS2 Resources/: PS2Resources_t.h
PCSX2_Core/Source/Common/PS2Constants/: PS2Constants.h
PCSX2_Core/Source/Common/PS2Resources/: PS2Resources_t.cpp  PS2Resources_t.h
PCSX2_Core/Source/Common/Tables/: EECoreExceptionsTable.cpp  EECoreExceptionsTable.h  EECoreInstructionTable.cpp  EECoreInstructionTable.h  EECoreSyscallTable.cpp  EECoreSyscallTable.h  EEDmacChannelTable.cpp  EEDmacChannelTable.h  IOPCoreExceptionsTable.cpp  IOPCoreExceptionsTable.h  IOPCoreInstructionTable.cpp  IOPCoreInstructionTable.h  IOPCoreSyscallTable.cpp  IOPCoreSyscallTable.h  IOPDmacChannelTable.cpp  IOPDmacChannelTable.h  SPU2CoreTable.cpp  SPU2CoreTable.h  VIFcodeInstructionTable.cpp  VIFcodeInstructionTable.h
PCSX2_Core/Source/Common/Types/: ClockSource_t.h  Context_t.h  DebugBaseObject_t.h  EnumMap_t.h  System_t.h
PCSX2_Core/Source/PS2Constants/: PS2Constants.h
PCSX2_Core/Source/PS2Resources/: PS2Resources_t.cpp  PS2Resources_t.h
PCSX2_Core/Source/PS2Resources/Clock/: Clock_t.cpp  Clock_t.h
PCSX2_Core/Source/PS2Resources/Common/: Common_t.cpp  Common_t.h
PCSX2_Core/Source/PS2Resources/EE/: EE_t.cpp  EE_t.h
PCSX2_Core/Source/PS2Resources/GS/: GS_t.cpp  GS_t.h
PCSX2_Core/Source/PS2Resources/IOP/: IOP_t.cpp  IOP_t.h
PCSX2_Core/Source/PS2Resources/SIF/: SIF_t.cpp  SIF_t.h
PCSX2_Core/Source/Resources/: Resources_t.cpp  Resources_t.h
PCSX2_Core/Source/Resources/CDVD/: CDVD_t.cpp  CDVD_t.h
PCSX2_Core/Source/Resources/Clock/: Clock_t.cpp  Clock_t.h
PCSX2_Core/Source/Resources/Common/: Common_t.cpp  Common_t.h
PCSX2_Core/Source/Resources/EE/: EE_t.cpp  EE_t.h
PCSX2_Core/Source/Resources/GS/: GS_t.cpp  GS_t.h
PCSX2_Core/Source/Resources/IOP/: IOP_t.cpp  IOP_t.h
PCSX2_Core/Source/Resources/SIO2/: SIO2_t.cpp
PCSX2_Core/Source/Resources/SPU2/: SPU2_t.cpp  SPU2_t.h
PCSX2_Core/Source/VM/: VM.cpp  VM.h  VMMain.cpp  VMMain.h
PCSX2_Core/Source/VM/Component Interfaces/: VMExceptionHandlerComponent.h  VMExecutionCoreComponent.h  VMInterpreterComponent.h  VMMMUComponent.h  VMPS2Component.h
PCSX2_Core/Source/VM/ExceptionHandler/: ExceptionHandler.cpp  ExceptionHandler.h
PCSX2_Core/Source/VM/MMUHandler/: MMUHandler.cpp  MMUHandler.h
PCSX2_Core/Source/VM/Systems/: Systems.txt
PCSX2_Core/Source/VM/Types/: ClockEvent_t.h  LogLevel_t.h  System.h  (+6 more)
PCSX2_Core/doc/: FPU Notes.xlsx
PCSX2_Core/src/VM/: VM.cpp  VM.h
PCSX2_Frontend/: CMakeLists.txt  PCSX2_Frontend.cpp  PCSX2_Frontend.vcxproj  PCSX2_Frontend.vcxproj.filters  ReadMe.txt  stdafx.cpp
PCSX2_Frontend/src/: PCSX2_Frontend.cpp
liborbum/: CMakeLists.txt
liborbum/doc/: IOP Core Syscall Table.csv  MIPS Instruction Parser.py
liborbum/doc/Instruction List Parser/: parsed_lookup_tree.json  parser.py
liborbum/src/: Core.cpp  Core.hpp
liborbum/src/Common/: Constants.hpp  Options.hpp
liborbum/src/Controller/: CController.hpp  ControllerEvent.hpp  ControllerType.hpp
liborbum/src/Resources/: RResources.cpp  RResources.hpp  SbusFifoQueues.cpp  SbusFifoQueues.hpp  SbusRegisters.cpp  SbusRegisters.hpp
liborbum/src/Utilities/: Utilities.cpp  Utilities.hpp
libpcsx2_core/libpcsx2_core/: CMakeLists.txt
libpcsx2_core/libpcsx2_core_test/: CMakeLists.txt
pcsx2_frontend/: CMakeLists.txt
project/liborbum/: CMakeLists.txt
project/liborbum/doc/: EE Core Syscall Table.csv  GenMemoryMappings.py
project/liborbum/src/: Core.cpp  Core.hpp
project/libpcsx2_core/libpcsx2_core_test/: CMakeLists.txt
project/orbumfront/: CMakeLists.txt
project/orbumfront/src/: OrbumFront.cpp
project/pcsx2_frontend/: CMakeLists.txt
project/pcsx2_frontend/src/: PCSX2_Frontend.cpp
project/utilities/: CMakeLists.txt
project/utilities/src/: Caches.hpp  EnumMap.hpp  Macros.hpp  Queues.hpp  TaskExecutor.hpp
utilities/: CMakeLists.txt
utilities/src/: Caches.hpp  Console.cpp  Console.hpp  Datetime.cpp  Datetime.hpp  EnumMap.hpp  Macros.hpp  Queues.hpp  TaskExecutor.hpp
(+2171 files in other folders)
